# forecast-agents

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml  railway.json  render.yaml  requirements.txt
.devcontainer/: devcontainer.json
assets/: README_AR.md  README_DE.md  README_ES.md  README_FR.md  README_HI.md  README_IT.md  README_JA.md  README_KO.md  README_PT.md  README_RU.md  README_VI.md  README_ZH.md
docs/: agents.md  architecture.md  consensus.md  deployment.md  examples.md  getting-started-keys.md  kalshi.md  memory.md  polymarket.md  providers.md  robinhood_agentic.md  sources.md
examples/: forecast_demo.py
forecast-ui/: index.html  package-lock.json  package.json
forecast-ui/src/: App.tsx  index.css
forecast_ai/: __init__.py  __main__.py  config.py  config_store.py  launcher.py  public_feed_topics.py
forecast_ai/agents/: __init__.py  base.py  macro.py  market.py  news.py  onchain.py  reddit.py  research.py  social.py
forecast_ai/api/: __init__.py  auth.py  profile_routes.py  public_routes.py  routes.py  server.py
forecast_ai/cli/: main.py  setup_wizard.py
forecast_ai/consensus/: __init__.py  confidence.py  engine.py  reasoning.py  weighted.py
forecast_ai/db/: supabase_store.py
forecast_ai/intelligence/: __init__.py  anomaly_detection.py  reasoning.py  (+3 more)
memory_data/: forecasts.json
scripts/: run_v03_benchmark.py
tests/: test_cli.py  test_config_store_env.py  test_consensus.py  test_facts_ai.py  test_kalshi.py  test_polymarket.py  test_profile.py  test_provider_fallback.py  test_public_feed.py  test_robinhood_agentic.py
(+43 files in other folders)
